# nexus

./: .dockerignore  Dockerfile  fly.toml  pyproject.toml  test_markdown.py
alembic/: env.py
alembic/versions/: 1c4fad790925_add_fields_to_projects_table.py  27e5ae956ade_fix_purpose_column_rename.py  48a95dd8d4e4_change_task_resource_to_many_to_many.py  8357190aea3c_create_projects_table.py  8c2d32238ae9_change_purpose_fields_in_projects.py  99b39dd717ef_merge_task_and_project_branches.py  a41143307b83_add_fields_to_projects_table.py  a4541dbb67a1_add_context_field_to_tasks.py  b55a1ff71ec4_add_task_order_field_to_tasks.py  db902881dc40_create_tasks_table.py  ea95bc30586d_rename_task_order_to_sort_order.py
prompts/: compare-videos.prompt.yml
src/: app.py  main.py
src/api/: routes.py
src/config/: __init__.py  env.py  langfuse_settings.py  llm_settings.py  settings.py
src/database/: database.py
src/evals/: test_category.py  test_military_naming.py  test_video_selection.py
src/evals/datasets/: sentiment_analysis.json  video_summaries.csv
src/models/: __init__.py  project.py  resource.py  task.py
src/pipelines/: __init__.py
src/pipelines/pkm/: __init__.py  new_info_evaluator.py  new_info_for_project_evaluator.py
src/prompts/: prompt_manager.py
src/prompts/github/: summariser.prompt.yml
src/prompts/templates/: categorization.j2  (+6 more)
src/services/: LLM.py  __init__.py  llm_factory.py
src/templates/: base.html  create_project.html  project_detail.html  projects.html
src/utils/: markdown_helper.py
tests/: test_calc.py  test_llm_factory.py
(+22 files in other folders)
