[project]
name = "promptlab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.15.2",
    "anthropic>=0.51.0",
    "instructor>=1.8.2",
    "jinja2>=3.1.6",
    "openai>=1.78.1",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.9.1",
    "pytest>=8.3.5",
    "python-dotenv>=1.1.0",
    "python-frontmatter>=1.1.0",
    "rich>=13.9.4",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

[tool.pytest.ini_options]
testpaths = ["tests", "src/evals"]
python_files = ["test_*.py"]
python_functions = "test_*"
pythonpath = [
  ".", "src",
]
